# rigel

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: rigel-spec.md  tutorial.md
docs/examples/: hello_world.rgl  recursion.expected  recursion.rgl  safe_div.rgl
docs/plans/: 00-conventions.md  01-data-model.md  02-lexer.md  03-parser.md  04-type-system.md  05-semantic-analysis.md  06-codegen-c.md  07-runtime.md  08-driver.md  09-interpreter.md  10-test-suite.md  README.md
docs/prompts/: dictionary-unification-exploration.md  ffi-abi-exploration.md  rigel-continuation-prompt.md
src/rigel/: __init__.py  ast.py  check.py  common.py  driver.py  emit_c.py  interp.py  lexer.py  parser.py  types.py
tests/: conftest.py  test_check.py  test_driver.py  test_example_files.py  test_examples.py  test_interp.py  test_lexer.py  test_parser.py  test_parser_roundtrip.py  test_types.py
